# pose_uwb

./: README.md  package.xml  setup.cfg  setup.py
launch/: filter.launch.py  rm_filter.launch.py  rm_uwb.launch  uwb.launch  wrist_filter.launch.py  wrist_uwb.launch
map/: bill_imu.ttt  lab.yaml  scenario_1_2_3_lab_uwb.ttt  scenario_1_2_3_lab_uwb.yaml  scenario_1_2_3_lab_uwb_imu.ttt  scenario_1_2_3_lab_uwb_imu_robomaster.ttt
map/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
map/log/: latest_build
params_filter/: param_Bill.yaml  param_rm.yaml
pose_uwb/: compute_coords.py  read_file.py  utils.py  wrist_position.py
scripts/: imu_with_cov.py  ray_uwb.py  rm_pose_uwb.py  wrist_pose_uwb_node.py
